FIXED: "break-inside: avoid-page' is not supported by Safari, Safari on iOS

--- a/main/id-cards/style.css
+++ b/main/id-cards/style.css
@@ -102,6 +102,6 @@ body {
 /* Rules for print layout */
 @media print {
     div#idCard {
-        break-inside: avoid-page;
+        page-break-inside: avoid;
     }
 }
